@@ -2,13 +2,8 @@
 <definition>
   <datasource type="PYEVAL" name="$(name)_thickness">
     <result name="result">
-import json
-thicknesslist = json.loads('$(thicknesslist)')
-position = int(float(ds.$(position)) + 0.5)
-thickness = []
-for pos, thick in enumerate(thicknesslist):
-     thickness.append(thick if pos &amp; position else 0.)
-ds.result = thickness
+from nxstools.pyeval import absorber
+ds.result = absorber.thickness(ds.$(position), '$(thicknesslist)')      
     </result>
  $datasources.$(position)</datasource>
 </definition>
